--- a/jupyter/requirements.txt
+++ b/jupyter/requirements.txt
@@ -5,6 +5,21 @@ napalm
 # https://blog.jupyter.org/open-redirect-vulnerability-in-jupyter-jupyterhub-adf43583f1e4
 notebook>=5.7.7
 
-# https://github.com/paramiko/paramiko/issues/1369 - needed until a new paramiko release fixes this
-# or else we'll get nasty deprecation warnings that bubble up to the user.
-cryptography==2.4.2
+# Pybatfish is currently not available in pypi, so we'll first install the dependencies from 
+# https://github.com/batfish/pybatfish/blob/master/requirements.txt, and then install pybatfish
+# from source. This will be updated once pybatfish is in pypi.
+attrs>=18.1.0
+deepdiff
+deprecated
+jupyter
+nbconvert
+nbformat
+netconan>=0.9.2
+pandas>=0.24.1,<0.25.0
+python-dateutil
+PyYAML
+requests
+requests-toolbelt
+simplejson
+six
+-e git+https://github.com/batfish/pybatfish.git#egg=pybatfish
